# 1c-mcp-sales-analyst

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  chat.py  demo_insights.py  demo_whatif.py  demo_whatif_integrated.py  demo_whatif_v2.py  docker-compose.yml  pyproject.toml  run_insights.py  run_web.py  start.sh  stop.sh  web_ui.py  ws_test.py  ws_test2.py
.github/workflows/: ci.yml  test.yml
1c_http_services/: 1C_FUNCTIONS.md  README.md  UNF_HTTP_SERVICES.md  batch_endpoint.bsl  documents_sales.bsl  execute_query.bsl  materialized_view_sales_daily.bsl  metadata_api.bsl  nomenclature_search_fixed.bsl  sales_aggregated.bsl  sales_optimized.bsl  validate_query.bsl
1c_http_services/margin_service/: Module.bsl
1c_http_services/mcp_kpi_service/: Module.bsl
data/: admin.db  search_queries.jsonl
data/sent_insights/: inactive_clients_manager_Кузнецов Андрей Владимирович_days_inactive_2026_25.json  inactive_clients_manager_Кузнецов Андрей Владимирович_days_inactive_2026_26.json  receivables_alert_client_"КОФЕМАН" (Мценск)_receivables_amount_2026_26.json  receivables_alert_client_"КОФЕМАН" (Мценск)_receivables_amount_2026_27.json  receivables_alert_client_"КОФЕМАН" (Мценск)_receivables_amount_2026_28.json  receivables_alert_client_VegMart_receivables_amount_2026_26.json  receivables_alert_client_VegMart_receivables_amount_2026_27.json  receivables_alert_client_VegMart_receivables_amount_2026_28.json  receivables_alert_client_«Самшит» ООО_receivables_amount_2026_26.json  receivables_alert_client_«Самшит» ООО_receivables_amount_2026_27.json  receivables_alert_client_«Самшит» ООО_receivables_amount_2026_28.json  receivables_alert_client_АО МонтажСервис_receivables_amount_2026_25.json  receivables_alert_client_АО МонтажСервис_receivables_amount_2026_27.json  receivables_alert_client_АО РемонтСервис_receivables_amount_2026_25.json  receivables_alert_client_АО РемонтСервис_receivables_amount_2026_27.json  (+597 more)
deploy/: nginx.conf
docs/: development-plan.xml  grace-integration.md  knowledge-graph.xml  requirements.xml  verification-plan.xml
examples/: demo_docparser.py  demo_root_cause.py  demo_whatif_mcp.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx
models_cache/: elasticity_.pkl
scripts/: grace-lint.sh
src/: __main__.py  cache.py  config.py  deepseek_client.py  logger.py  metrics.py  perf.py  proxy_server.py  server.py  tools.py
tests/: conftest.py  test_abc_xyz.py  test_admin.py  test_anonymization.py  test_api.py  test_c1_client.py  test_charts.py  test_chat.py  test_chat_models.py  test_chat_repository.py  test_chat_service.py  test_dashboard.py  test_dashboard_telegram.py  test_dashboard_v2.py  test_dashboard_v3.py  test_dashboard_v4.py  test_dashboard_v5.py  test_data_fetcher.py  test_data_quality.py  test_deepseek_client.py  test_docparser.py  test_events.py  test_forecasting.py  test_fts_cache.py  test_guardrails.py  test_insights.py  test_metadata.py  test_mock_client.py  test_proactive.py  test_query_builder.py  test_query_validator.py  test_rag.py  test_readonly_guard.py  test_reflection.py  test_resilience.py  test_search.py  test_search_analytics.py  test_tools.py  test_whatif_scenarios.py  test_workflows.py
web/: app.py
(+290 files in other folders)
