[project]
name = "1c-mcp-sales-analyst"
version = "0.1.0"
description = "AI-аналитик склада и продаж на базе 1С + MCP + DeepSeek"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "plotly>=6.0.0",
    "pandas>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "psutil>=5.9",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.30.0",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
