[project]
name = "1c-mcp-sales-analyst"
version = "0.1.0"
description = "AI-аналитик склада и продаж на базе 1С + MCP + DeepSeek"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "plotly>=6.0.0",
    "pandas>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "psutil>=5.9",
    "croniter>=6.0.0",
    "openpyxl>=3.1.0",
    "qrcode>=8.0.0",
    "Pillow>=10.0.0",
    "weasyprint>=62.0",
    "prometheus-client>=0.20.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",
    "rapidfuzz>=3.0.0",
    "python-dateutil>=2.8.0",
    "tzlocal>=5.0.0",
    "apscheduler>=3.10.0",
    "scikit-learn>=1.4.0",
    "numpy>=2.0.0",
    "structlog>=24.0.0",
    "joblib>=1.3.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.30.0",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.coverage.run]
source = ["src", "web"]
omit = [".venv/*", "tests/*", "src/admin/migrate_users.py"]
concurrency = ["thread"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def __repr__",
    "return None  # pragma: no cover",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
